Bug 402903 - [Wayland] Launch feedback on taskbar does not work
Summary: [Wayland] Launch feedback on taskbar does not work
Status: CLOSED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.21.3
Platform: Fedora RPMs Linux
: HI normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: wayland-only
: 385164 428447 435266 436603 437180 444672 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-01-05 19:44 UTC by Alexander Potashev
Modified: 2026-02-02 00:26 UTC (History)
18 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23!
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2019-01-05 19:44:11 UTC
SUMMARY
[Wayland] Launch feedback on taskbar does not work.

STEPS TO REPRODUCE
1. Run wayland plasma session.
2. Click on the Google Chrome icon in taskbar's quick launch area.
3. Look at the taskbar.

OBSERVED RESULT
Nothing happens until the Chrome window is finally visible.

EXPECTED RESULT
Taskbar should display a fake button for Chrome immediately to indicate that my click on the Chrome icon is acknowledged by Plasma.

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.14.4
KDE Frameworks Version: 5.53.0
Qt Version: 5.11.1

ADDITIONAL INFORMATION
Comment 1 Eike Hein 2019-01-06 10:00:30 UTC
This is known errata - we don't have support for launch feedback on Wayland yet.
Comment 2 David Edmundson 2019-12-22 11:32:29 UTC
*** Bug 385164 has been marked as a duplicate of this bug. ***
Comment 3 Patrick Silva 2019-12-22 12:20:13 UTC
also no bouncing cursor even with Qt 5.14.
Comment 4 boingo-00 2020-09-08 18:27:40 UTC
Is it technically possible to fix launch response?
Comment 5 Nate Graham 2020-09-08 19:50:19 UTC
yes. :)
Comment 6 Alex 2021-02-19 05:49:06 UTC
Is https://gitlab.freedesktop.org/wayland/wayland-protocols/-/merge_requests/50 relevant to this bug?
Comment 7 David Edmundson 2021-03-18 13:20:18 UTC
It is related.
Comment 8 Nate Graham 2021-04-06 04:30:09 UTC
*** Bug 435266 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2021-05-05 16:12:54 UTC
*** Bug 428447 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2021-05-05 16:13:00 UTC
*** Bug 436603 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2021-05-05 16:13:31 UTC
Since the Wayland protocol has been merged, this isn't blocked by anything upstream anymore and we can implement support on our side. Re-opening the bug report to track that.
Comment 12 Nate Graham 2021-05-19 02:29:19 UTC
*** Bug 437180 has been marked as a duplicate of this bug. ***
Comment 13 Alexey Ilyin 2021-07-16 11:38:22 UTC
As far as I understand the spec of the new xdg-activation protocol, the activation token transfer should be completed by the application being activated.  Thus, changes are required in all applications for the activation mechanism to work correctly.  And if KDE applications can still be patched, it's not clear what to do with third-party applications.

My suggestion is that regardless of the implementation of the classic launch feedback (bouncing cursor, etc.), it makes sense to add visual feedback at least on the taskbar itself.

There is currently no application launch feedback on Wayland, which is inconvenient when the application takes a relatively long time to launch.

I'll try to suggest a sequence of actions when invoking the application from the taskbar:
1. User clicks on the launcher icon of application A;
2. The taskbar draws a visual feedback on this icon, as it does on X11;
3. At the same moment, we start a timer with the time specified in the General behavior KCM;
4. When the corresponding application starts, the taskbar knows about it (by matching the launched application to its .desktop file), and we just stop the timer immediately;
5. If the newly opened application window does not match the user-invoked icon (.desktop file), we do nothing;
6. When the timer expires, we stop displaying launch feedback, considering that the application has not started, or it does not correspond to the called .desktop file.
Comment 14 Alexey Ilyin 2021-07-16 12:04:43 UTC
And yes, I understand that if this is done, users may start submitting bugs like this (https://bugs.kde.org/show_bug.cgi?id=162321), but it seems to me that this is not as scary as the lack of feedback at all.

Thanks for attention :)
Comment 15 Bharadwaj Raju 2021-07-22 17:18:45 UTC
On git master right now, I get launch feedback on taskbar on all apps (KDE and non-KDE). Closing as fixed.
Comment 16 Pawel 2021-07-22 17:36:45 UTC
doesn't work when launching apps from the new kicker app. is there a separate bug for that?
Comment 17 Bharadwaj Raju 2021-07-22 17:38:35 UTC
(In reply to Pawel from comment #16)
> doesn't work when launching apps from the new kicker app. is there a
> separate bug for that?

Yeah, see bug 405624
Comment 18 Patrick Silva 2021-07-23 13:21:39 UTC
I see no feedback in the task managers (tested icon-only and classic modes)
on my fully updated neon unstable.

The only feedback on launch is bouncing cursor. But even bouncing cursor
does not work when I open an external link with internet browser or an app
via kickoff.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 19 Nate Graham 2021-08-03 21:41:25 UTC
Indeed, seems to be still broken.
Comment 20 Nate Graham 2021-08-20 01:09:40 UTC
Still in progrss.
Comment 21 Vlad Zahorodnii 2021-08-25 09:36:54 UTC
Git commit 73c378832b040fe90ae42d4bc83fbedf6270c7ef by Vlad Zahorodnii.
Committed on 25/08/2021 at 09:36.
Pushed by vladz into branch 'master'.

[Task Manager] Add support for StartupTasksModel on Wayland

M  +2    -0    libtaskmanager/CMakeLists.txt
M  +5    -0    libtaskmanager/startuptasksmodel.cpp
A  +207  -0    libtaskmanager/waylandstartuptasksmodel.cpp     [License: LGPL(3+eV) LGPL(v3.0) LGPL(v2.1)]
A  +29   -0    libtaskmanager/waylandstartuptasksmodel.h     [License: LGPL(3+eV) LGPL(v3.0) LGPL(v2.1)]
M  +1    -1    shell/org.kde.plasmashell.desktop.cmake

https://invent.kde.org/plasma/plasma-workspace/commit/73c378832b040fe90ae42d4bc83fbedf6270c7ef
Comment 22 Nate Graham 2021-08-25 13:35:51 UTC
Woohoo! \o/
Comment 23 Nate Graham 2021-11-01 16:59:05 UTC
*** Bug 444672 has been marked as a duplicate of this bug. ***
Comment 24 Sam 2021-11-20 12:27:47 UTC
I don't get the bouncy cursor after switching to wayland. 

KDE Plasma: 5.23.3
KDE Frameworks: 5.88.0
QT Version: 5.15.2
Kernel Version: 5.15.2-1-default (64-bit)
Graphics platform: Wayland
Comment 25 kaminata 2026-02-01 23:18:07 UTC
This bug is still not fixed. I don't get launch feedback on Plasma 6.5.5 with Wayland. On X11 it's working fine.
Comment 26 Nate Graham 2026-02-01 23:39:29 UTC
This is a fairly old bug report and the code has changed a lot since it was reported. There's a very good chance the issue you're experiencing is caused by something else, even if the outward symptoms look and feel the same. Can you please submit a new bug report? Thank you!