[Task Manager] Add support for StartupTasksModel on Wayland

BUG: 402903