libtaskmanager/startuptasksmodel.cpp
@@ -9,6 +9,7 @@
 
 #include <config-X11.h>
 
+#include "waylandstartuptasksmodel.h"
 #if HAVE_X11
 #include "xstartuptasksmodel.h"
 #endif
@@ -53,6 +54,10 @@ StartupTasksModel::Private::~Private()
 
 void StartupTasksModel::Private::initSourceTasksModel()
 {
+    if (!sourceTasksModel && KWindowSystem::isPlatformWayland()) {
+        sourceTasksModel = new WaylandStartupTasksModel();
+    }
+
 #if HAVE_X11
     if (!sourceTasksModel && KWindowSystem::isPlatformX11()) {
         sourceTasksModel = new XStartupTasksModel();
